--- a/index.html
+++ b/index.html
@@ -69,10 +69,18 @@
             background-size: cover;
         }
 
-        .design {
-          background-size: contain;
-          margin-top: 50px;
-          opacity: 30%;
+
+        .bottom {
+            display: flex;
+            justify-content: center;
+            margin-top: 30px;
+
+        }
+        .bottom img {
+            width: 120px;
+            height: 25px;
+            background-position: center;
+            background-size: cover;
         }
 
         
@@ -84,10 +92,12 @@
         <div class="profile" title="나는야 항해사 해뭉이"></div>
         <a target="_blank" href="https://blog.naver.com/onthethesea_" title="블로그">BLOG</a>
         <a target="_blank" href="https://grafolio.naver.com/onthethesea" title="그라폴리오">GRAFOLIO</a>
-        <div class="design">
-            <img src="./wave.png">
-        </div>
+      
     </div>
- 
+    <div class="bottom">
+       <a target="_blank" href="https://www.instagram.com/onthethe._.sea/" title="인스타">
+            <img src="./insta.png">
+       </a>
+    </div>
 </body>
 </html>
